fix(customer): CHECKOUT-5531 Fix spacing in account creation form

--- a/src/app/address/AddressForm.scss
+++ b/src/app/address/AddressForm.scss
@@ -11,8 +11,13 @@
         display: block;
         flex: 1;
         flex-basis: 100%;
+        margin-bottom: spacing("half");
         max-width: 100%;
         padding: 0 spacing("half");
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 
     .dynamic-form-field--province,
@@ -30,13 +35,5 @@
         @include breakpoint("small") {
             flex-basis: 30%;
         }
-    }
-}
-
-.dynamic-form-field {
-    margin-bottom: spacing("half");
-
-    &:last-child {
-        margin-bottom: 0;
     }
 }
